//! Integration service implementation

use crate::proto::integrations::*;
use tokio_stream::wrappers::ReceiverStream;
use tonic::{Request, Response, Status};
use tracing::debug;

#[derive(Debug, Clone, Default)]
pub struct IntegrationServiceImpl {}

impl IntegrationServiceImpl {
    pub fn new() -> Self {
        Self {}
    }
}

#[tonic::async_trait]
impl integration_service_server::IntegrationService for IntegrationServiceImpl {
    async fn create_integration(&self, _req: Request<CreateIntegrationRequest>) -> Result<Response<CreateIntegrationResponse>, Status> {
        debug!("CreateIntegration called");
        Ok(Response::new(CreateIntegrationResponse {
            integration: None,
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Integration created".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn get_integration(&self, _req: Request<GetIntegrationRequest>) -> Result<Response<GetIntegrationResponse>, Status> {
        debug!("GetIntegration called");
        Ok(Response::new(GetIntegrationResponse {
            integration: None,
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Integration retrieved".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn list_integrations(&self, _req: Request<ListIntegrationsRequest>) -> Result<Response<ListIntegrationsResponse>, Status> {
        debug!("ListIntegrations called");
        Ok(Response::new(ListIntegrationsResponse {
            integrations: vec![],
            pagination: None,
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Integrations retrieved".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn update_integration(&self, _req: Request<UpdateIntegrationRequest>) -> Result<Response<UpdateIntegrationResponse>, Status> {
        debug!("UpdateIntegration called");
        Ok(Response::new(UpdateIntegrationResponse {
            integration: None,
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Integration updated".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn delete_integration(&self, _req: Request<DeleteIntegrationRequest>) -> Result<Response<DeleteIntegrationResponse>, Status> {
        debug!("DeleteIntegration called");
        Ok(Response::new(DeleteIntegrationResponse {
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Integration deleted".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn test_integration(&self, _req: Request<TestIntegrationRequest>) -> Result<Response<TestIntegrationResponse>, Status> {
        debug!("TestIntegration called");
        Ok(Response::new(TestIntegrationResponse {
            result: None,
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Integration tested".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn enable_integration(&self, _req: Request<EnableIntegrationRequest>) -> Result<Response<EnableIntegrationResponse>, Status> {
        debug!("EnableIntegration called");
        Ok(Response::new(EnableIntegrationResponse {
            integration: None,
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Integration enabled".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn disable_integration(&self, _req: Request<DisableIntegrationRequest>) -> Result<Response<DisableIntegrationResponse>, Status> {
        debug!("DisableIntegration called");
        Ok(Response::new(DisableIntegrationResponse {
            integration: None,
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Integration disabled".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn health_check(&self, _req: Request<HealthCheckRequest>) -> Result<Response<HealthCheckResponse>, Status> {
        debug!("HealthCheck called");
        Ok(Response::new(HealthCheckResponse {
            status: "healthy".to_string(),
            checked_at: Some(prost_types::Timestamp::from(std::time::SystemTime::now())),
            details: std::collections::HashMap::new(),
            api_status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Health check passed".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn get_integration_metrics(&self, _req: Request<GetIntegrationMetricsRequest>) -> Result<Response<GetIntegrationMetricsResponse>, Status> {
        debug!("GetIntegrationMetrics called");
        Ok(Response::new(GetIntegrationMetricsResponse {
            metrics: None,
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Metrics retrieved".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn sync_data(&self, _req: Request<SyncDataRequest>) -> Result<Response<SyncDataResponse>, Status> {
        debug!("SyncData called");
        Ok(Response::new(SyncDataResponse {
            records_synced: 0,
            sync_started: Some(prost_types::Timestamp::from(std::time::SystemTime::now())),
            sync_completed: Some(prost_types::Timestamp::from(std::time::SystemTime::now())),
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Sync completed".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    type SubscribeIntegrationEventsStream = ReceiverStream<Result<IntegrationEvent, Status>>;
    async fn subscribe_integration_events(&self, _req: Request<SubscribeIntegrationEventsRequest>) -> Result<Response<Self::SubscribeIntegrationEventsStream>, Status> {
        debug!("SubscribeIntegrationEvents called");
        let (_, rx) = tokio::sync::mpsc::channel(100);
        Ok(Response::new(ReceiverStream::new(rx)))
    }
}
